# duckdb_sqlsmith

./: .gitignore  .gitmodules  CMakeLists.txt  config.json  config_nested.json  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml  TestDebug.yml  test-fuzzer-ci-still-works.yml
scripts/: reduce_sql.py  run_fuzzer.py
src/: CMakeLists.txt  fuzzyduck.cpp  random_nums_config.cpp  sqlsmith_extension.cpp  statement_generator.cpp  statement_simplifier.cpp
src/include/: fuzzyduck.hpp  random_nums_config.hpp  randoms_config.hpp  statement_generator.hpp  statement_simplifier.hpp
test/sql/: call_fuzzyduck.test  sql_reduce.test
